# ClinicalNotes

./: .gitignore  .pre-commit-config.yaml  README.md  explore_clinical_notes.ipynb  explore_discharge.py  load_to_sqlite.py  main.py  pyproject.toml  query_notes.py
configs/oumi/: analyze.yaml  eval.yaml  train_sft.yaml
scripts/: convert_mimic_iv_bhc.py
src/clinicalnotes_1/: __init__.py  cli.py
src/clinicalnotes_1/data/: __init__.py  convert_mimic_iv_bhc.py  database.py
tests/: test_convert_mimic_iv_bhc.py
